; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/tftpd/tests/extr_functional.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/tftpd/tests/extr_functional.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pidfile = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@SIGTERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @pidfile, align 4
  %4 = call i32* @fopen(i32 %3, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  br label %23

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @fscanf(i32* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %2)
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %18

12:                                               ; preds = %8
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @SIGTERM, align 4
  %15 = call i32 @kill(i32 %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @waitpid(i32 %16, i32* null, i32 0)
  br label %18

18:                                               ; preds = %12, %8
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @fclose(i32* %19)
  %21 = load i32, i32* @pidfile, align 4
  %22 = call i32 @unlink(i32 %21)
  br label %23

23:                                               ; preds = %18, %7
  ret void
}

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i32 @fscanf(i32*, i8*, i32*) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @waitpid(i32, i32*, i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @unlink(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
